--- a/Languages/Lang.de-DE.resx
+++ b/Languages/Lang.de-DE.resx
@@ -144,4 +144,22 @@
   <data name="run_custom_ps_script" xml:space="preserve">
     <value>Benutzerdefiniertes PowerShell-Skript ausführen.</value>
   </data>
+  <data name="save_settings" xml:space="preserve">
+    <value>Einstellungen speichern!</value>
+  </data>
+  <data name="real_name" xml:space="preserve">
+    <value>Voller Name:</value>
+  </data>
+  <data name="password" xml:space="preserve">
+    <value>Passwort:</value>
+  </data>
+  <data name="rating" xml:space="preserve">
+    <value>Rating:</value>
+  </data>
+  <data name="callsign" xml:space="preserve">
+    <value>Rufzeichen:</value>
+  </data>
+  <data name="es_folder" xml:space="preserve">
+    <value>EuroScope-Ordner:</value>
+  </data>
 </root>
